add task solution

--- a/src/blocks/footer.scss
+++ b/src/blocks/footer.scss
@@ -175,6 +175,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 14px;
+  text-decoration: none;
 
   @include onTablet {
     width: 220px;
