--- a/src/blocks/gallery.scss
+++ b/src/blocks/gallery.scss
@@ -5,6 +5,8 @@
   align-items: center;
 
   margin-bottom: 100px;
+
+  @include contentPaddingInline;
 }
 
 .gallery__title {
@@ -18,6 +20,12 @@
 
 .gallery__image {
   margin-bottom: 20px;
+  height: 410px;
+
+  @include onDesktop {
+    height: 600px;
+    width: 370px;
+  }
 }
 
 .gallery__slider {
@@ -30,6 +38,10 @@
 .gallery__dots {
   display: flex;
   gap: 22px;
+
+  @include onDesktop {
+    display: none;
+  }
 }
 
 .gallery__dot {
@@ -45,4 +57,62 @@
 
 .subscribe {
   margin-bottom: 18px;
+}
+
+.hidden {
+  display: none;
+
+  @include onTablet {
+    display: block;
+  }
+
+  @include onDesktop {
+    display: none;
+  }
+}
+
+.gallery__images {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+
+  @include onDesktop {
+    gap: 30px;
+  }
+}
+
+.gallery-image__four {
+  display: none;
+
+  @include onDesktop {
+    display: block;
+    height: 600px;
+    width: 770px;
+
+    margin-top: -20px;
+  }
+}
+
+.gallery__images-desktop {
+  display: none;
+
+  @include onDesktop {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 30px;
+  }
+}
+
+.gallery__image__third {
+  width: 770px;
+  height: 360px;
+}
+
+.gallery__image__five {
+  height: 360px;
+  width: 370px;
 }
