--- a/src/blocks/subscribe.scss
+++ b/src/blocks/subscribe.scss
@@ -91,6 +91,7 @@
   height: 50px;
   width: 230px;
   cursor: pointer;
+  padding-inline: 24px;
 
   box-sizing: border-box;
 
@@ -106,6 +107,8 @@
   border: 1px solid rgba(241, 74, 39, 1);
   background-color: rgba(241, 74, 39, 1);
   box-sizing: border-box;
+  cursor: pointer;
+  transition: all 0.5s linear;
 
   display: flex;
   justify-content: center;
@@ -114,6 +117,12 @@
   @include onTablet {
     width: 70px;
     height: 70px;
+  }
+
+  &:hover {
+    transform: scale(1.1);
+    background-color: orchid;
+    border: 1px solid orchid;
   }
 }
 
