--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -50,6 +50,8 @@
       font-size: 18px;
       font-weight: 500;
     }
+
+    @include hover(color, $gray-4);
   }
 
   &__icons {
@@ -72,6 +74,8 @@
     display: inline-block;
     width: 20px;
     height: 20px;
+
+    @include hover(transform, scale(1.3));
 
     &--facebook {
       background-image: url(../images/icons/facebook-icon.svg);
@@ -109,6 +113,10 @@
     @include onSmallDesktop {
       font-size: 16px;
       font-weight: 400;
+    }
+
+    &:not(:first-child) {
+      @include hover(color, $gray-4);
     }
   }
 
