--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -29,6 +29,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      align-items: center;
       gap: 12px;
     }
 
@@ -50,7 +51,14 @@
       display: none;
       @include onSmallDesktop {
         display: block;
-
+        color: #344F10;
+        font-family: $poppins;
+        font-size: 14px;
+        font-style: normal;
+        font-weight: 400;
+        line-height: 130%;
+        letter-spacing: 0.7px;
+        text-transform: uppercase;
       }
     }
   }
@@ -80,6 +88,8 @@
       line-height: 150%;
       text-transform: capitalize;
       padding-block: 20px;
+
+      @include hover(color, $gray-3);
     }
   }
 
