--- a/src/styles/blocks/shop.scss
+++ b/src/styles/blocks/shop.scss
@@ -73,6 +73,7 @@
     letter-spacing: 0.7px;
     text-transform: uppercase;
     position: relative;
+    transition: color 0.3s;
 
     padding-top: 20px;
     @include onTablet {
