--- a/src/styles/blocks/about.scss
+++ b/src/styles/blocks/about.scss
@@ -90,6 +90,7 @@
       @include onSmallDesktop {
         grid-column: 7 / 11;
         grid-row: 1 / 6;
+        @include hover(transform, scale(1.1));
       }
       object-fit: cover;
       height: 100%;
@@ -103,6 +104,7 @@
         display: block;
         grid-column: -3 / -1;
         grid-row: 3 / -1;
+        @include hover(transform, scale(1.1));
       }
       object-fit: cover;
       height: 100%;
