--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -125,4 +125,87 @@
       color: $desc-text;
     }
   }
+
+  &-lection {
+    &__img {
+      width: 100%;
+      height: 210px;
+
+      @include onTablet {
+        height: 390px;
+        padding-inline: 34px;
+      }
+
+      @include onDesktop {
+        padding-inline: 0;
+      }
+    }
+
+    &__box {
+      background-color: #fff;
+      box-shadow: 0px 2px 0px 0px rgba(26, 90, 76, 0.25);
+      width: 280px;
+      margin: 0 auto;
+      transform: translateY(-50%);
+      padding-block: 20px;
+
+      @include onTablet {
+        padding-inline: 55px;
+        padding-top: 45px;
+        padding-bottom: 50px;
+        width: 570px;
+      }
+
+      @include onDesktop {
+        padding-inline: 100px;
+      }
+    }
+
+    &__head {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding-bottom: 20px;
+    }
+
+    &__subtitle {
+      color: $secondary-color;
+      font-weight: 500;
+      line-height: 100%;
+      padding-right: 10px;
+      font-family: IBM Plex Sans;
+      font-size: 16px;
+
+      @include onTablet {
+        font-size: 14px;
+        margin-right: auto;
+      }
+    }
+
+    &__date {
+      color: $green;
+      font-family: IBM Plex Sans;
+      font-size: 16px;
+      font-weight: 700;
+      line-height: 150%;
+
+      @include onTablet {
+        font-size: 14px;
+      }
+    }
+
+    &__title {
+      color: $accent-title;
+      text-align: center;
+      font-family: Montserrat;
+      font-size: 28px;
+      font-weight: 400;
+      line-height: 100%;
+
+      @include onTablet {
+        font-size: 36px;
+        text-align: left;
+      }
+    }
+  }
 }
