add task solution

--- a/src/blocks/footer.scss
+++ b/src/blocks/footer.scss
@@ -27,6 +27,10 @@
 
     grid-column: 1 / 1;
   }
+
+  @include onDesktop {
+    grid-column: 1 / 2;
+  }
 }
 
 .footer__top-logo {
@@ -62,6 +66,10 @@
 
     margin-top: 51px;
   }
+
+  @include onDesktop {
+    grid-column: 3 / 6;
+  }
 }
 
 .footer__average::after {
@@ -75,6 +83,13 @@
 
   @include onTablet {
     top: 300px;
+  }
+
+  @include onDesktop {
+    height: 260px;
+    width: 1px;
+    left: 470px;
+    top: 0;
   }
 }
 
@@ -106,10 +121,15 @@
   line-height: 21px;
 }
 
+.footer__schedule-text {
+  text-decoration: none;
+  color: rgba(15, 14, 8, 1);
+}
+
 .footer__contact-us {
   display: flex;
   flex-direction: column;
-  width: 130px;
+  width: 128px;
 
   @include onTablet {
     width: 220px;
@@ -142,6 +162,11 @@
 
   @include onTablet {
     grid-column: 2 / 4;
+  }
+
+  @include onDesktop {
+    grid-column: 8 / -1;
+    margin-top: 47px;
   }
 }
 
@@ -207,6 +232,10 @@
   @include onTablet {
     grid-column: 5 / -1;
   }
+
+  @include onDesktop {
+    grid-column: 11 / -1;
+  }
 }
 
 .footer__end-text-second {
@@ -214,5 +243,9 @@
 
   @include onTablet {
     grid-column: 1 / 3;
+  }
+
+  @include onDesktop {
+    width: 270px;
   }
 }
