--- a/src/blocks/relevant.scss
+++ b/src/blocks/relevant.scss
@@ -23,6 +23,11 @@
     width: 100%;
     align-items: start;
   }
+
+  @include onDesktop {
+    @include pageGrid;
+    align-items: center;
+  }
 }
 
 .relevant__title {
@@ -53,6 +58,10 @@
   @include onTablet {
     height: 520px;
     width: 100%;
+  }
+
+  @include onDesktop {
+    grid-column: 1 / 8;
   }
 }
 
@@ -225,5 +234,17 @@
     line-height: 36px;
     text-align: start;
     width: 460px;
+  }
+}
+
+.article__wrap {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+
+  @include onDesktop {
+    grid-column: 9 / -1;
+    width: 370px;
   }
 }
