--- a/src/blocks/footer.scss
+++ b/src/blocks/footer.scss
@@ -124,6 +124,10 @@
 .footer__schedule-text {
   text-decoration: none;
   color: rgba(15, 14, 8, 1);
+
+  &:hover {
+    color: cadetblue;
+  }
 }
 
 .footer__contact-us {
