--- a/src/blocks/menu.scss
+++ b/src/blocks/menu.scss
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
 
-  height: 45vh;
+  height: 400px;
   background-color: rgba(26, 90, 76, 1);
 
   @include contentPaddingInline;
@@ -22,6 +22,11 @@
 
   @include onTablet {
     @include pageGrid;
+    height: 225px;
+  }
+
+  @include onDesktop {
+    height: 233px;
   }
 }
 
@@ -44,6 +49,7 @@
 
   @include onDesktop {
     margin-left: 50px;
+    grid-column: 1 / 5;
   }
 }
 
@@ -105,6 +111,7 @@
 
   @include onDesktop {
     margin-left: 50px;
+    grid-column: 8 / -1;
   }
 }
 
@@ -118,8 +125,15 @@
 }
 
 .menu__bottom-wrap {
+  margin-bottom: 16px;
+
   @include onTablet {
     grid-column: 1 / 4;
+    margin-left: -20px;
+  }
+
+  @include onDesktop {
+    margin-left: -100px;
   }
 }
 
@@ -129,8 +143,19 @@
 
 .ggg {
   grid-column: 4 / -1;
+  max-width: 280px;
 
   @include onTablet {
     max-width: 145px;
+    margin-top: 40px;
+  }
+}
+
+.menu__time-text {
+  width: 280px;
+  margin-top: 20px;
+
+  @include onTablet {
+    width: 170px;
   }
 }
