--- a/src/blocks/subscribe.scss
+++ b/src/blocks/subscribe.scss
@@ -7,7 +7,6 @@
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  // height: 386px;
 
   display: flex;
   flex-direction: column;
@@ -23,6 +22,10 @@
 
   @include onDesktop {
     margin-left: -50px;
+  }
+
+  @include onBigDesktop {
+    margin-left: -130px;
   }
 }
 
