add new solution

--- a/src/blocks/normalize.scss
+++ b/src/blocks/normalize.scss
@@ -3,12 +3,20 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
+
+  &:has(.menu:target) {
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 999;
+  }
 }
 
 .page {
+  position: relative;
+
   &:has(.menu:target) {
     overflow: hidden;
   }
+
   scroll-behavior: smooth;
 }
 
