fixed logo position

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -26,11 +26,13 @@
     position: absolute;
     z-index: 1;
     top: 9px;
-    left: 132px;
+    left: 50%;
+    transform: translateX(-50%);
 
     @include for-tablet {
       top: 15px;
       left: 0;
+      transform: none;
     }
   }
 
