--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,13 @@
 @import "utils";
-@import "fonts";
-@import "typography";
+@import "blocks";
+
+* {
+  box-sizing: border-box;
+}
 
 body {
-  background: $c-gray;
+  background: #fff;
+  margin: 0;
+  padding: 0;
+  font-family: "IBM Plex Sans", sans-serif;
 }
