--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,5 @@
-$c-gray: #eee;
+$tablet-min-width: 768px;
+$desktop-min-width: 1280px;
+$container-max-width: 1170px;
+$montserrat: "Montserrat", sans-serif;
+$ibm: "IBM Plex Sans", sans-serif;
