--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,12 @@
 $c-gray: #eee;
+$custom-green: #1a5a4c;
+$custom-gray: #687480;
+$custom-orange: #f14a27;
+$custom-darkgray: #4e4e4e;
+$custom-dark: #0f0e08;
+$custom-padding: 20px;
+$custom-grey: #e0e0e0;
+$custom-darkish: #18181a;
+$menu-background: #1a5a4c;
+$custom-padding-tablet: 34px;
+$custom-padding-desktop: 55px;
